--- a/src/view/template/footer.pug
+++ b/src/view/template/footer.pug
@@ -1,8 +1,8 @@
 footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-t.border-gray-200.text-sm.font-medium.text-gray-400.flex.flex-col.gap-3(class='md:pl-10 xl:bg-white')
 	h3.text-xl.font-semibold.mb-2 About Us
 	each item in list_about_us
-		a(href="#").w-fit= item
-	.social-media.flex.gap-4.w-fit
+		a(href="#").w-fit.ml-1= item
+	.social-media.flex.gap-4.w-fit.ml-1
 		a(href="#")
 			img(src="./assets/svg/twitter.svg" alt="Icono de Twitter")
 		a(href="#")
