--- a/src/styles/input.pcss
+++ b/src/styles/input.pcss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .title {
-  @apply text-2xl font-bold text-primary;
+  @apply text-2xl font-bold text-primary xl:tracking-tighter dark:text-white;
 }
 
 .subtitle {
@@ -56,7 +56,7 @@
   @apply transition ease-in-out duration-200 delay-150 focus-within:shadow-sm focus-within:translate-y-1;
 }
 .button-animation {
-  @apply transition ease-in-out duration-200 delay-100 hover:-translate-y-1 hover:scale-110 hover:bg-primary hover:text-white;
+  @apply transition ease-in-out duration-200 hover:-translate-y-1 hover:scale-110 hover:bg-primary hover:text-white;
 }
 
 #tabBar,
