Se agrego parcel

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-extend template/template.pug
+extend templates/template.pug
 
 block main
 	main#home.flex.flex-col.gap-8.w-full.py-6(class='md:py-10 md:gap-10')
