--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -8,4 +8,4 @@ footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-t.border-gray-200.text-
 		a(href="#")
 			img(src="./assets/svg/instagram.svg" alt="Icono de Instagram")
 .tabBar(class='lg:hidden').sticky.bottom-0
-	include ../components/tabBar.pug
+	include components/tabBar.pug
