--- a/src/templates/head.pug
+++ b/src/templates/head.pug
@@ -6,6 +6,5 @@ head
 	link(rel='preconnect' href='https://fonts.googleapis.com')
 	link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
 	link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap' rel='stylesheet')
-	link(rel='stylesheet' href='./css/min.output.css')
-	link(rel='icon' type='image' sizes='20x20' href='./favicon.ico')
+	link(rel='icon' type='image' sizes='20x20' href='./assets/favicon.ico')
 	title Travel Page
