--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -1,4 +1,4 @@
-include ../components/globals.pug
+include components/globals.pug
 
 doctype html
 html(lang="en")
@@ -7,4 +7,4 @@ html(lang="en")
 		include header.pug
 		block main
 		include footer.pug
-		script(src="./index.js")
+		script(src="./js/app.js" type="module")
