Configuracion de parcel

--- a/src/css/styles.pcss
+++ b/src/css/styles.pcss
@@ -56,7 +56,7 @@
   @apply transition ease-in-out duration-200 delay-150 focus-within:shadow-sm focus-within:translate-y-1;
 }
 .button-animation {
-  @apply transition ease-in-out duration-200 hover:-translate-y-1 hover:scale-110 hover:bg-primary hover:text-white;
+  @apply transition ease-in-out active:translate-y-1 lg:active:translate-x-0 lg:hover:duration-200 lg:hover:scale-110 lg:hover:bg-primary lg:hover:text-white dark:lg:hover:bg-white dark:lg:hover:text-primary;
 }
 
 #tabBar,
