--- a/src/templates/components/tabBar.pug
+++ b/src/templates/components/tabBar.pug
@@ -1,9 +1,9 @@
 #tabBar(class='md:hidden landscape:hidden dark:bg-gray-800 dark:text-white dark:border-gray-700').w-full.py-5.flex.justify-evenly.bg-white.border-t.border-gray-200
 	a(href="#" class='lg:hidden')
-		img(src="./assets/svg/home.svg" alt="Icono del Home")
+		img(src="assets/svg/home.svg" alt="Icono del Home")
 	a(href="#recommended")
-		img(src="./assets/svg/search.svg" alt="Icono de Busqueda" class='lg:hidden')
+		img(src="assets/svg/search.svg" alt="Icono de Busqueda" class='lg:hidden')
 	a(href="#trending-stays")
-		img(src="./assets/svg/heart.svg" alt="Icono de Favoritos" class='lg:hidden')
+		img(src="assets/svg/heart.svg" alt="Icono de Favoritos" class='lg:hidden')
 	button#toggleTabBar(class='lg:hidden')
-		img(src="./assets/svg/moon.svg" alt="Icono de Moon").w-6
+		img(src="assets/svg/moon.svg" alt="Icono de Moon").w-6
