--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -4,8 +4,8 @@ footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-t.border-gray-200.text-
 		a(href="#").w-fit.ml-1= item
 	.social-media.flex.gap-4.w-fit.ml-1
 		a(href="#")
-			img(src="./assets/svg/twitter.svg" alt="Icono de Twitter")
+			img(src="assets/svg/twitter.svg" alt="Icono de Twitter")
 		a(href="#")
-			img(src="./assets/svg/instagram.svg" alt="Icono de Instagram")
+			img(src="assets/svg/instagram.svg" alt="Icono de Instagram")
 .tabBar(class='lg:hidden').sticky.bottom-0
 	include components/tabBar.pug
