--- a/src/templates/head.pug
+++ b/src/templates/head.pug
@@ -6,5 +6,6 @@ head
 	link(rel='preconnect' href='https://fonts.googleapis.com')
 	link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
 	link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap' rel='stylesheet')
-	link(rel='icon' type='image' sizes='20x20' href='./assets/favicon.ico')
+	link(rel="stylesheet" href="css/styles.pcss")
+	link(rel='icon' type='image' sizes='20x20' href='assets/svg/favicon.svg')
 	title Travel Page
