--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -7,4 +7,4 @@ html(lang="en")
 		include header.pug
 		block main
 		include footer.pug
-		script(src="./js/app.js" type="module")
+		script(src="js/app.js" type="module")
