--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ block main
 			h2.title.pl-5.pb-6(class='md:pl-10 xl:pl-5') Trending Stays
 			.card-container.px-4.grid.gap-6(class='md:px-10 md:grid-cols-5 md:grid-rows-3 lg:grid-rows-layout')
 				+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.', 'md:col-span-2 lg:col-span-full lg:row-span-1 md:row-span-1', 'lg:max-h-[30rem]', 'md:w-1/5 lg:w-auto')
-				+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.', 'md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2 md:row-span-1', 'lg:max-h-[36rem]', 'md:w-2/5 lg:w-1/5')
+				+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.', 'md:col-span-3 lg:row-span-2 lg:col-span-2 md:row-span-1', 'lg:max-h-[36rem]', 'md:w-2/5 lg:w-1/5')
 				+card('bg-miami', 'Miami', '3 rooms, 2 bathrooms,  kitchen and amazing sea view.', 'md:col-span-full lg:col-span-3 md:row-span-1', 'lg:max-h-[17rem]', 'md:w-1/5 lg:w-1/3')
 				+card('bg-bali', 'Bali', '2 rooms, 2 bathrooms,  kitchen and private pool.', 'md:col-span-full lg:col-span-3 md:row-span-1', 'lg:max-h-[17rem]', 'md:w-1/3 lg:w-1/5')
 		section#FAQs.w-full.px-6.pb-2.flex.flex-col.gap-2(class='md:pl-10 xl:pl-5')
