Identacion de codigo css del header y footer

--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -3,7 +3,7 @@ include components/globals.pug
 doctype html
 html(lang="en")
 	include head.pug
-	body.w-full.font-Montserrat.box-border(class='xl:max-w-6xl xl:mx-auto dark:bg-gray-900')
+	body
 		include header.pug
 		block main
 		include footer.pug
