--- a/src/css/styles.pcss
+++ b/src/css/styles.pcss
@@ -2,6 +2,239 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply box-border
+  w-full
+  font-Montserrat
+
+  xl:max-w-6xl
+  xl:mx-auto
+
+  dark:bg-gray-900;
+}
+
+/* Header */
+.header {
+  @apply flex flex-col
+  items-center
+  w-full h-[30rem]
+  px-6
+
+  md:items-start
+  md:px-0
+  lg:h-[34rem];
+  /* Imagen de fondo del Header */
+  &__bg-img {
+    @apply absolute
+    w-full h-[30rem]
+    bg-sanFrancisco bg-cover bg-no-repeat
+
+    sm:bg-sanFranciscoDesktop
+    lg:h-[34rem]
+    xl:max-w-6xl;
+  }
+  /* Buscador del Header*/
+  &__search {
+    @apply z-10
+    flex
+    items-center
+    gap-4
+    w-full
+    py-3 px-5
+    rounded-full
+    shadow-lg
+    bg-white
+
+    md:hidden;
+    & input {
+      @apply w-full
+      text-start
+      font-semibold
+      outline-none;
+    }
+  }
+  /* Titulo del Header */
+  &__title {
+    @apply z-10
+    hidden
+    text-3xl font-bold
+    w-80
+    mt-24 ml-14
+
+    md:block
+    lg:w-96
+    lg:mt-32 lg:ml-20
+    lg:text-4xl;
+  }
+  /* Boton de explorar */
+  &__btn {
+    @apply z-10
+    w-3/5
+    mt-64
+    p-3
+    rounded-full
+    shadow-lg
+    font-semibold text-primary
+    bg-white
+
+    md:w-44
+    md:mt-4 md:ml-14
+    lg:mt-6 lg:ml-20
+    xl:text-sm
+
+    dark:text-white
+    dark:bg-primary;
+  }
+}
+
+/* Navbar */
+.navbar {
+  @apply z-10
+  flex
+  justify-end
+  w-full
+  py-5
+
+  md:items-center
+  md:justify-between
+  md:py-2 md:px-6
+  md:shadow-sm
+  md:bg-white
+  lg:py-3 lg:px-8
+  xl:px-3
+  xl:shadow-none
+
+  dark:md:bg-gray-800
+  dark:xl:bg-gray-900;
+  /* Logo */
+  &__logo {
+    @apply hidden
+    items-center
+    gap-1
+
+    md:flex;
+    & span {
+      @apply text-lg
+      font-bold
+      text-primary
+
+      xl:text-xl
+      xl:font-semibold
+      xl:tracking-tighter
+
+      dark:text-white;
+    }
+  }
+  /* Buscador del Navbar*/
+  &__search {
+    @apply z-10
+    hidden
+    items-center
+    gap-4
+    w-full
+    py-3 px-5
+    rounded-full
+    shadow-sm
+
+    md:flex
+    md:w-1/2
+    lg:hidden
+
+    dark:md:shadow-gray-700;
+    & input {
+      @apply w-full
+      text-start
+      font-semibold
+      outline-none
+
+      dark:text-white
+      dark:md:bg-gray-800;
+    }
+  }
+  /* Menu de navegacion */
+  &__menu {
+    @apply hidden
+    justify-center
+    gap-10
+
+    lg:flex
+    lg:gap-8
+    lg:text-sm lg:font-bold lg:text-primary
+    xl:gap-12
+    xl:font-semibold
+
+    dark:text-white;
+    & a {
+      @apply button-animation
+      py-1 px-2
+      rounded-full
+
+      hover:translate-y-0;
+    }
+  }
+  /* Menu de usuario */
+  &__menu--user {
+    @apply flex
+    gap-8
+    py-2 px-5
+    rounded-full
+    shadow-lg
+    cursor-pointer
+    bg-white
+
+    md:p-0
+    md:shadow-none
+    md:cursor-default
+    md:bg-transparent
+
+    dark:bg-gray-800
+    dark:md:bg-transparent;
+  }
+}
+
+/* Footer */
+.footer {
+  @apply flex flex-col
+  gap-3
+  w-full
+  pt-4 pb-8 px-6
+  text-sm font-medium text-gray-400
+  border-t border-gray-200
+  bg-gray-100
+
+  md:pl-10
+  xl:bg-white;
+  &__title {
+    @apply mb-2
+    text-xl font-semibold;
+  }
+  &__social-media {
+    @apply flex
+    gap-4
+    w-fit
+    ml-1;
+  }
+}
+
+/* TabBar */
+.tabBar {
+  @apply sticky bottom-0
+  flex
+  justify-evenly
+  w-full
+  py-5
+  border-t border-gray-200
+  bg-white
+
+  landscape:hidden
+
+  md:hidden
+
+  dark:text-white
+  dark:border-gray-700
+  dark:bg-gray-800;
+}
+
 .title {
   @apply text-2xl font-bold text-primary xl:tracking-tighter dark:text-white;
 }
@@ -49,20 +282,20 @@
   @apply w-full h-[36rem] md:max-h-[26rem] bg-fixed bg-cover bg-center bg-no-repeat;
 }
 
-.night-mode {
-  @apply transition ease-in-out active:shadow-sm active:translate-y-0.5;
-}
-.input-animation {
+/* Animiaciones */
+.searcher-animation {
   @apply transition ease-in-out duration-200 delay-150 focus-within:shadow-sm focus-within:translate-y-1;
 }
 .button-animation {
-  @apply transition ease-in-out active:translate-y-1 lg:active:translate-x-0 lg:hover:duration-200 lg:hover:scale-110 lg:hover:bg-primary lg:hover:text-white dark:lg:hover:bg-white dark:lg:hover:text-primary;
+  @apply transition ease-in-out active:translate-y-1 lg:hover:duration-200 lg:hover:scale-110 lg:hover:bg-primary lg:hover:text-white dark:lg:hover:bg-white dark:lg:hover:text-primary;
+}
+.night-mode {
+  @apply transition ease-in-out active:shadow-sm active:translate-y-0.5 md:transition-none md:active:translate-y-0 md:active:shadow-none;
 }
 
-#tabBar,
+.tabBar,
 button,
 span,
-figure,
-.card__description {
+figure {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
