--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,11 +1,13 @@
-footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-t.border-gray-200.text-sm.font-medium.text-gray-400.flex.flex-col.gap-3(class='md:pl-10 xl:bg-white')
-	h3.text-xl.font-semibold.mb-2 About Us
+footer#about-us.footer
+	h2.footer__title
+		| About Us
 	each item in list_about_us
 		a(href="#").w-fit.ml-1= item
-	.social-media.flex.gap-4.w-fit.ml-1
-		a(href="#")
-			img(src="assets/svg/twitter.svg" alt="Icono de Twitter")
-		a(href="#")
-			img(src="assets/svg/instagram.svg" alt="Icono de Instagram")
-.tabBar(class='lg:hidden').sticky.bottom-0
-	include components/tabBar.pug
+	.footer__social-media
+		a(href="#"): img(src="assets/svg/twitter.svg" alt="Icono de Twitter")
+		a(href="#"): img(src="assets/svg/instagram.svg" alt="Icono de Instagram")
+.tabBar
+	a(href="#"): img(src="assets/svg/home.svg" alt="Icono del Home")
+	a(href="#recommended"): img(src="assets/svg/search.svg" alt="Icono de Busqueda")
+	a(href="#trending-stays"): img(src="assets/svg/heart.svg" alt="Icono de Favoritos")
+	button#toggleTabBar: img.w-6(src="assets/svg/moon.svg" alt="Icono de Moon")
