--- a/src/templates/components/globals.pug
+++ b/src/templates/components/globals.pug
@@ -2,19 +2,19 @@
 
 mixin mini-card(image, title, description)
 	section.mini-card
-		figure.mini-card__img(class= image)
+		figure.mini-card__img(class=image)
 		article.mini-card__description
-			h4.font-bold=title
-			p.text-xs=description
+			h4.font-bold= title
+			p.text-xs= description
 
-mixin card(image, title, description, col_span__row_span, height, width)
+mixin card(image__height, title, description, col_span__row_span, width)
 	section.card(class=col_span__row_span)
-		.content(class='grid lg:justify-items-end')
+		.card__content
 			article.card__description(class=width)
-				h3.text-2xl.font-bold.tracking-wide.mb-4(class='lg:mb-2 md:tracking-tight')= title
-				p.text-base.font-normal= description
-			figure.card__img(class= image class=height)
+				h3= title
+				p= description
+			figure.card__img(class=image__height)
 
 mixin FAQ(title)
-	h3.subtitle.ml-1(class='dark:text-gray-400')= title
-	p.description.pl-2(class='dark:text-gray-200') We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.
+	h3.faqs__subtitle= title
+	p.faqs__description We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.
