--- a/src/templates/components/navbar.pug
+++ b/src/templates/components/navbar.pug
@@ -11,7 +11,7 @@ nav.navbar
 		a(href="#trending-stays") Stays
 		a(href="#FAQs") FAQs
 		a(href="#about-us") About Us
-	figure.navbar__menu--user.night-mode
+	figure.navbar__menu--user
 		img.hidden.w-5.cursor-pointer(class='lg:block' src="assets/svg/search.svg" alt="Icono de Busqueda")
 		img#toggle.cursor-pointer(class='md:w-5' src="assets/svg/moon.svg" alt="Icono de modo nocturno")
 		img.hidden.w-5(class='md:block' src="assets/svg/user.svg" alt="Icono de usuario")
