Mejora de performance

--- a/src/templates/components/navbar.pug
+++ b/src/templates/components/navbar.pug
@@ -1,10 +1,10 @@
 nav.navbar
 	a.navbar__logo(href="#")
-		img.w-10(class='xl:w-9' src="assets/svg/favicon.svg" alt="Icono de la pagina")
+		img.w-10(class='xl:w-9' src="assets/svg/favicon.svg" width='40' height='40' alt="Icono de la pagina")
 		span Travel Page
 	label.navbar__search(for="search__navbar")
 		span
-			img.w-5(src="assets/svg/search.svg" alt="Icono de Busqueda")
+			img.w-5(src="assets/svg/search.svg" width='18' height='18' alt="Icono de Busqueda")
 		input#search__navbar(type='search' placeholder='San Francisco')
 	.navbar__menu
 		a(href="#recommended") Locations
@@ -12,6 +12,6 @@ nav.navbar
 		a(href="#FAQs") FAQs
 		a(href="#about-us") About Us
 	figure.navbar__menu--user
-		img.hidden.w-5.cursor-pointer(class='lg:block' src="assets/svg/search.svg" alt="Icono de Busqueda")
-		img#toggle.cursor-pointer(class='md:w-5' src="assets/svg/moon.svg" alt="Icono de modo nocturno")
-		img.hidden.w-5(class='md:block' src="assets/svg/user.svg" alt="Icono de usuario")
+		img.hidden.w-5.cursor-pointer(class='lg:block' src="assets/svg/search.svg" width='20' height='22' alt="Icono de Busqueda")
+		img#toggle.cursor-pointer(class='md:w-5' src="assets/svg/moon.svg" width='20' height='22' alt="Icono de modo nocturno")
+		img.hidden.w-5(class='md:block' src="assets/svg/user.svg" width='20' height='22' alt="Icono de usuario")
