--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -3,7 +3,7 @@ header.header
 	figure.header__bg-img
 	label.header__search(for="search")
 		span
-			img.w-5(src="assets/svg/search.svg" alt="Icono de Busqueda")
+			img.w-5(src="assets/svg/search.svg" width='18' height='18' alt="Icono de Busqueda")
 		input#search(type='search' placeholder='San Francisco')
 	h1.header__title
 		| Find More Locations like this
