--- a/src/css/styles.pcss
+++ b/src/css/styles.pcss
@@ -1,3 +1,46 @@
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(../fonts/Montserrat-Light.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(../fonts/Montserrat-Regular.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(../fonts/Montserrat-Medium.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(../fonts/Montserrat-SemiBold.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(../fonts/Montserrat-Bold.woff) format("woff");
+}
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url(../fonts/Montserrat-Black.woff) format("woff");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,20 +60,18 @@ body {
 .header {
   @apply flex flex-col
   items-center
-  w-full h-[30rem]
+  w-full h-[26rem]
   px-6
 
   md:items-start
-  md:px-0
-  lg:h-[34rem];
+  md:px-0;
   /* Imagen de fondo del Header */
   &__bg-img {
     @apply absolute
-    w-full h-[30rem]
+    w-full h-[26rem]
     bg-sanFrancisco bg-cover bg-no-repeat
 
     sm:bg-sanFranciscoDesktop
-    lg:h-[34rem]
     xl:max-w-6xl;
   }
   /* Buscador del Header*/
@@ -60,11 +101,12 @@ body {
     hidden
     text-3xl font-bold
     w-80
-    mt-24 ml-14
+    mt-28 ml-14
 
     md:block
+    md:mt-20
     lg:w-96
-    lg:mt-32 lg:ml-20
+    lg:mt-20 lg:ml-20
     lg:text-4xl;
   }
   /* Boton de explorar */
@@ -72,7 +114,7 @@ body {
     @apply button-animation
     z-10
     w-3/5
-    mt-64
+    mt-52
     p-3
     rounded-full
     shadow-lg
