--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -4,10 +4,10 @@ footer#about-us.footer
 	each item in list_about_us
 		a(href="#").w-fit.ml-1= item
 	.footer__social-media
-		a(href="#"): img(src="assets/svg/twitter.svg" width='25' height='26' alt="Icono de Twitter")
-		a(href="#"): img(src="assets/svg/instagram.svg" width='25' height='26' alt="Icono de Instagram")
+		a(href="#"): img(loading="lazy" src="assets/svg/twitter.svg" width='25' height='26' alt="Icono de Twitter")
+		a(href="#"): img(loading="lazy" src="assets/svg/instagram.svg" width='25' height='26' alt="Icono de Instagram")
 .tabBar
-	a(href="#"): img(src="assets/svg/home.svg" width='26' height='25' alt="Icono del Home")
-	a(href="#recommended"): img(src="assets/svg/search.svg" width='26' height='24' alt="Icono de Busqueda")
-	a(href="#trending-stays"): img(src="assets/svg/heart.svg" width='26' height='27' alt="Icono de Favoritos")
-	button#toggleTabBar: img.w-6(src="assets/svg/moon.svg" width='24' height='24' alt="Icono de Moon")
+	a(href="#"): img(loading="lazy" src="assets/svg/home.svg" width='26' height='25' alt="Icono del Home")
+	a(href="#recommended"): img(loading="lazy" src="assets/svg/search.svg" width='26' height='24' alt="Icono de Busqueda")
+	a(href="#trending-stays"): img(loading="lazy" src="assets/svg/heart.svg" width='26' height='27' alt="Icono de Favoritos")
+	button#toggleTabBar: img.w-6(loading="lazy" src="assets/svg/moon.svg" width='24' height='24' alt="Icono de Moon")
